<?xml version="1.0" encoding="UTF-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:stretchColumns="1">
	<TableRow>
		<ScrollView android:layout_width="wrap_content"
			android:layout_height="260dip" android:padding="10dip">
			<LinearLayout android:orientation="vertical"
				android:layout_width="wrap_content" android:layout_height="wrap_content">
				<TextView android:id="@+id/about_content" 
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:autoLink="web" android:textStyle="bold" android:textSize="15dip"
					android:gravity="left" android:text="@string/about_google_code" />
				<TextView android:id="@+id/about_content" android:layout_marginTop="3dip"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:autoLink="web" android:textStyle="bold" android:textSize="15dip"
					android:gravity="left" android:text="@string/about_programm_text" />
				<TextView android:id="@+id/about_content" android:layout_marginTop="3dip"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginLeft="5dip" android:textStyle="bold"
					android:text="Руководители проекта:" />
				<TextView android:id="@+id/about_autors"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginLeft="15dip" android:gravity="left"
					android:text="@string/about_leaders_text" />
				<TextView android:id="@+id/about_content" android:layout_marginTop="3dip"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginLeft="5dip" android:textStyle="bold"
					android:text="Разработчики приложения:" />
				<TextView android:id="@+id/about_autors"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginLeft="15dip" android:gravity="left"
					android:text="@string/about_developers_text" />
				<TextView android:id="@+id/about_email" android:layout_marginTop="3dip"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:autoLink="email" android:textStyle="bold" android:textSize="15dip"
					android:gravity="left" android:text="@string/about_email_text" />
			</LinearLayout>
		</ScrollView>
	</TableRow>
	<TableRow>
		<Button android:id="@+id/about_exit_button"
			android:layout_width="100dip" android:layout_height="40dip"
			android:clickable="true" android:layout_marginBottom="2dip"
			android:text="@string/about_exit_button_text" android:layout_gravity="center"
			android:gravity="center" />
	</TableRow>
</TableLayout>